<resources>
    <string name="app_name">Task manager</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">Корпорация зла</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_tasks">Задачи</string>
    <string name="nav_workers">Сотрудники</string>
    <string name="nav_settings">Настройки</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hello_mainTask_fragment">Глаынй таск задачи</string>
    <string name="bottom_sheet_peek">bottom sheet peek</string>
    <string name="bottom_sheet_content">bottom sheet content</string>
    <string name="chat_title">Чат по задаче</string>
    <string name="item1">Item1</string>
    <string name="item2">Item2</string>
    <string name="item3">Item3</string>
    <string name="item4">Item4</string>
    <string name="item_accept">Сохранить</string>
    <string name="popupmenu_check">Выполнено</string>
    <string name="popupmenu_edit">Редактировать</string>
    <string name="popupmenu_delete">Удалить</string>
    <string name="progress_25">25%</string>
    <string name="progress_50">50%</string>
    <string name="progress_75">75%</string>
    <string name="progress_100">100%</string>
    <string name="pupup_check">Выполнено</string>
    <string name="pupup_percent">Частично</string>
</resources>
